[#41] Fix: ResponseEntity -> BaseResponse 수정