@@ -6,14 +6,12 @@ import dev.backend.wakuwaku.domain.member.dto.response.GetMemberResponse;
 import dev.backend.wakuwaku.domain.member.dto.response.MemberIdResponse;
 import dev.backend.wakuwaku.domain.member.entity.Member;
 import dev.backend.wakuwaku.domain.member.service.MemberService;
+import dev.backend.wakuwaku.global.response.BaseResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 @RestController
 @RequestMapping("wakuwaku/v1/members")
@@ -24,32 +22,34 @@ public class MemberController {
 
 
     @GetMapping("/{id}")
-    public ResponseEntity<GetMemberResponse> findById(@PathVariable("id") Long id) {
+    public BaseResponse<GetMemberResponse> findById(@PathVariable("id") Long id) {
         Member memberEntity = memberService.findById(id);
+        
+        return new BaseResponse<>(new GetMemberResponse(memberEntity));
 
-        return ResponseEntity.ok().body(new GetMemberResponse(memberEntity));
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<MemberIdResponse> update(@PathVariable("id") Long id, @RequestBody MemberUpdateRequest memberUpdateRequest) {
+    public BaseResponse<MemberIdResponse> update(@PathVariable("id") Long id, @RequestBody MemberUpdateRequest memberUpdateRequest) {
         Long dbId = memberService.update(id, memberUpdateRequest);
 
-        return ResponseEntity.ok().body(new MemberIdResponse(dbId));
+        return new BaseResponse<>(new MemberIdResponse(dbId));
+
     }
     @DeleteMapping("/{id}") // 삭제
-    public ResponseEntity<Void> delete(@PathVariable("id") Long id) {
+    public BaseResponse<Void> delete(@PathVariable("id") Long id) {
         memberService.deactivateById(id);
 
-        return ResponseEntity.ok().build();
+        return new BaseResponse<>();
     }
 
     @GetMapping("/list")
-    public ResponseEntity<List<GetMemberResponse>> findAll() {
+    public BaseResponse<List<GetMemberResponse>> findAll() {
         List<Member> memberList = memberService.findAll();
 
-        return ResponseEntity.ok().body(memberList.stream()
+        return new BaseResponse<>(memberList.stream()
                 .map(GetMemberResponse::new)
-                .collect(toList()));
+                .toList());
     }
 
 }
